--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,11 +8,11 @@
 <body>
     <h1>Testando carga e imagens</h1>
     <p>Abaixo voce vai ver uma imagem que esta na mesma pasta</p>
-    <img src="imagens/logo-hmtl.png" alt="Logo html5">
+    <img src="fotos/logo-html.png" alt="logo-html">
     <p>Abaixo voce vai ver uma imagem que estão em sub-pastas</p>
-    <img src="imagens/logo-css.png" alt="Logo html5">
+    <img src="fotos/logo-css.png" alt="logo-css">
     <p>Tambem pode mos carregar imagens externas</p>
-    <img src="imagens/logo-javascript.png" alt="Logo html5">
+    <img src="fotos/logo-javascript.png" alt="Logo logo-javascript">
 
 
 </body>
